crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__extras__templatetags__custom_links.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::custom_links":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "extras.templatetags.custom_links::tag::custom_links":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
