crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__extras__templatetags__dashboard.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::render_widget":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "extras.templatetags.dashboard::tag::render_widget":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: widget
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
