crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__extras__templatetags__log_levels.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::log_level":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "extras.templatetags.log_levels::tag::log_level":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: level
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
